--- a/jsonl_viewer/templates/jsonl_viewer/index.html
+++ b/jsonl_viewer/templates/jsonl_viewer/index.html
@@ -117,5 +117,7 @@
             {% endfor %}
         </div>
     {% endfor %}
+    
+    <a href="{% url 'model_ranking' %}">View Model Rankings</a>
 </body>
 </html>
